--- a/gerenciamento_senai/src/main/resources/static/css/style.css
+++ b/gerenciamento_senai/src/main/resources/static/css/style.css
@@ -29,7 +29,8 @@ h1 {
         "wdth" 100;
 }
 
-h2, label {
+h2,
+label {
     font-family: "Bricolage Grotesque", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
@@ -38,7 +39,8 @@ h2, label {
         "wdth" 100;
 }
 
-h3, span {
+h3,
+span {
     font-family: "Bricolage Grotesque", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
@@ -47,7 +49,10 @@ h3, span {
         "wdth" 100;
 }
 
-h4, input, textarea, select {
+h4,
+input,
+textarea,
+select {
     font-family: "Bricolage Grotesque", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -66,7 +71,142 @@ h5 {
 }
 
 body {
+    font-family: "Bricolage Grotesque", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     margin: 0px auto;
+}
+
+ul,
+li {
+    list-style-type: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.sideBar {
+    background-color: #1e1e1e;
+    color: #fff;
+    width: 16%;
+    height: 100vh;
+    position: fixed;
+    padding: 30px;
+    z-index: 999;
+}
+
+.sideBar li {
+    margin: 13px 0px 13px -20px;
+    font-weight: 400;
+    font-size: 22px;
+}
+
+.sideBar li:hover {
+    transition: 0.4s;
+    background-color: #ae3139bd;
+    border-radius: 16px;
+    padding: 5px 2.5px;
+}
+
+.sideBar .logo img {
+    max-width: 100%;
+    height: 5vh;
+}
+
+.logo {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3vh;
+}
+
+i {
+    margin: 0px 13px;
+}
+
+.active {
+    background-color: #E30613;
+    border-radius: 16px;
+    padding: 5px 2.5px;
+}
+
+.navBar {
+    z-index: 1;
+    background-color: #fff;
+    height: 60px;
+    margin: 0px auto;
+    border-bottom: 3px solid #DDB9BB;
+    border-top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.link-sidebar {
+    color: white;
+    text-decoration: none;
+}
+
+
+
+.navBar ul {
+    margin: 0px 20%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
 }
 
+.navBar li {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+
+
+.navBar input {
+    border-radius: 16px;
+    padding: 5px 13px;
+    border: 2px solid #c4c4c4;
+    font-family: "Bricolage Grotesque", sans-serif;
+    transition: 2s;
+    appearance: none;
+    width: 200px;
+}
+
+input:focus {
+    border: 2px solid #ffffff;
+    transition: 2s;
+    appearance: none;
+}
+
+input:active {
+    border: 2px solid #ffffff;
+    transition: 2s;
+    outline: 0px solid;
+    appearance: none;
+}
+
+.iconsBar {
+    display: flex;
+    color: #1e1e1e;
+    align-items: center;
+    float: right;
+    right: 0;
+    position: absolute;
+    margin: 0px 26px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.iconsBar img {
+    border-radius: 50%;
+    width: 40px;
+}
