--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admConsumo.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admConsumo.html
@@ -4,14 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Buscar Consumo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/styleRead.css}">
 </head>
 
 <body>
-    
+    <div class="sideBar">
+        <div class="logo">
+            <img th:src="@{/img/logo-senai1.png}" alt="">
+        </div>
+        <ul>
+            <li><a href="/interna-adm" class="link-sidebar"><i class="fa-solid fa-inbox"></i> Dashboard</a></li>
+            <li><a href="/adm_funcionarios" class="link-sidebar"><i class="fa-solid fa-circle-user"></i> Funcionários</a></li>
+            <li><a href="/adm_patrimonio" class="link-sidebar"><i class="fa-solid fa-star"></i> Ativos</a></li>
+            <li><a href="/adm_sala" class="link-sidebar"><i class="fa-solid fa-house"></i> Ambientes</a></li>
+            <li class="active"><a href="/adm_consumo" class="link-sidebar"><i class="fa-solid fa-box"></i> Estoque</a></li>
+            <li><a href="/adm_mov" class="link-sidebar"><i class="fa-solid fa-arrows-alt-v"></i> Movimentações</a></li>
+        </ul>
+    </div>
+    <div class="navBar">
+        <ul>
+            <li><input type="text" placeholder="Buscar..."></li>
+            <div class="iconsBar">
+                <i class="fa-solid fa-cog"></i>
+                <i class="fa-solid fa-bell"></i>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyqI7u9US1GS-0749Cj7KOXgxxHrgkLqgtEw&s">
+            </div>
+        </ul>
+    </div>
     <div class="content read">
-        <div class="title"><h2>Estoque - itens de Consumo</h2></div>
+        <div class="title">
+            <h2>Estoque - itens de Consumo</h2>
+        </div>
         <table>
             <thead>
                 <tr>
@@ -46,8 +71,13 @@
                 <h1>Cadastrar item</h1>
             </div>
         </a>
+        <a href="/adm-registrar-saida">
+            <div class="link">
+                <h1>Registrar saída</h1>
+            </div>
+        </a>
     </div>
-    
+
 </body>
 
 </html>
