--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/cadastroAmbiente.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/cadastroAmbiente.html
@@ -26,8 +26,10 @@
                 <input type="text" class="form-control" id="nome" name="nome" required>
             </div>
             <div class="form-group">
-                <label for="responsavel">Responsável (RE do Funcionário):</label>
-                <input type="number" class="form-control" id="responsavel" name="responsavel" required>
+                <label for="responsavel">Funcionario responsável::</label>
+                <select class="form-control" id="funcionario" name="funcionario" required>
+                    <option th:each="funcionario : ${funcionarios}" th:value="${funcionario.re}" th:text="${funcionario.nome}"></option>
+                </select>
             </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
