--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/internaIndex.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/internaIndex.html
@@ -4,16 +4,85 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styleRead.css}">
+    <link rel="stylesheet" th:href="@{/css/styleDashboard.css}">
+
 </head>
 
 <body>
-    <h1>Adm reconhecido!</h1>
-    <a href="/adm_patrimonio">Patrimonios</a>
-    <a href="/adm_funcionarios">Funcionarios</a>
-    <a href="/adm_mov">Movimentação</a>
-    <a href="/adm_consumo">Consumo</a>
-    <a href="/adm_sala">Ambientes</a>
-    <a href="/logout_adm">Sair</a>
+    <div class="sideBar">
+        <div class="logo">
+            <img th:src="@{/img/logo-senai1.png}" alt="">
+        </div>
+        <ul>
+            <li class="active"><a href="/interna-adm" class="link-sidebar"><i class="fa-solid fa-inbox"></i>
+                    Dashboard</a></li>
+            <li><a href="/adm_funcionarios" class="link-sidebar"><i class="fa-solid fa-circle-user"></i>
+                    Funcionários</a></li>
+            <li><a href="/adm_patrimonio" class="link-sidebar"><i class="fa-solid fa-star"></i> Ativos</a></li>
+            <li><a href="/adm_sala" class="link-sidebar"><i class="fa-solid fa-house"></i> Ambientes</a>
+            </li>
+            <li><a href="/adm_consumo" class="link-sidebar"><i class="fa-solid fa-box"></i> Estoque</a></li>
+            <li><a href="/adm_mov" class="link-sidebar"><i class="fa-solid fa-arrows-alt-v"></i> Movimentações</a></li>
+        </ul>
+    </div>
+    <div class="navBar">
+        <ul>
+            <li><input type="text" placeholder="Buscar..."></li>
+            <div class="iconsBar">
+                <i class="fa-solid fa-cog"></i>
+                <i class="fa-solid fa-bell"></i>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyqI7u9US1GS-0749Cj7KOXgxxHrgkLqgtEw&s">
+            </div>
+        </ul>
+    </div>
+    <div class="content">
+        <div class="cards-container">
+            <div class="card">
+                <div class="card-title">
+                    <h3>Numero de patrimonio cadastrados</h3>
+                </div>
+                <div class="card-content">
+                    <h5 th:text="${nPatrimonios}"></h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-title">
+                    <h3>Numero de ambientes cadastrados</h3>
+                </div>
+                <div class="card-content">
+                    <h5 th:text="${nAmbientes}"></h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-title">
+                    <h3>Numero de funcionarios cadastrados</h3>
+                </div>
+                <div class="card-content">
+                    <h5 th:text="${nFuncionarios}"></h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-title">
+                    <h3>Numero de movimentações registradas</h3>
+                </div>
+                <div class="card-content">
+                    <h5 th:text="${nMov}"></h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-title">
+                    <h3>Média de patrimônios por sala</h3>
+                </div>
+                <div class="card-content">
+                    <h5 th:text="${mediaPatrimonioSala}"></h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
