--- a/gerenciamento_senai/src/main/resources/templates/loginAdm.html
+++ b/gerenciamento_senai/src/main/resources/templates/loginAdm.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Login - ADM</title>
     <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/styleLogin.css}">
