--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admAmbientes.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admAmbientes.html
@@ -16,11 +16,14 @@
         </div>
         <ul>
             <li><a href="/interna-adm" class="link-sidebar"><i class="fa-solid fa-inbox"></i> Dashboard</a></li>
-            <li><a href="/adm_funcionarios" class="link-sidebar"><i class="fa-solid fa-circle-user"></i> Funcionários</a></li>
+            <li><a href="/adm_funcionarios" class="link-sidebar"><i class="fa-solid fa-circle-user"></i>
+                    Funcionários</a></li>
             <li><a href="/adm_patrimonio" class="link-sidebar"><i class="fa-solid fa-star"></i> Ativos</a></li>
-            <li class="active"><a href="/adm_sala" class="link-sidebar"><i class="fa-solid fa-house"></i> Ambientes</a></li>
-            <li ><a href="/adm_consumo" class="link-sidebar"><i class="fa-solid fa-box"></i> Estoque</a></li>
+            <li class="active"><a href="/adm_sala" class="link-sidebar"><i class="fa-solid fa-house"></i> Ambientes</a>
+            </li>
+            <li><a href="/adm_consumo" class="link-sidebar"><i class="fa-solid fa-box"></i> Estoque</a></li>
             <li><a href="/adm_mov" class="link-sidebar"><i class="fa-solid fa-arrows-alt-v"></i> Movimentações</a></li>
+            <li><a href="/logout_adm" class="link-sidebar"><i class="fas fa-sign-out-alt"></i>Sair</a></li>
         </ul>
     </div>
     <div class="navBar">
