--- a/gerenciamento_senai/src/main/resources/templates/login.html
+++ b/gerenciamento_senai/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
         <div class="image">
             <img th:src="@{/img/logo-senai1.png}" alt="logo">
         </div>
-        <form action="#" th:action="@{/login}" method="post">
+        <form action="#" th:action="@{/}" method="post">
             <label for="username">Email:</label>
             <input type="email" id="email" name="email" required placeholder="Email corporativo">
             <label for="password">Senha:</label>
