--- a/gerenciamento_senai/src/main/resources/templates/loginAdm.html
+++ b/gerenciamento_senai/src/main/resources/templates/loginAdm.html
@@ -25,6 +25,9 @@
         <div class="link-adm">
             <p style="color: white;">Não tem uma conta Adm? </p><a href="/">Faça login como funcionario</a>
         </div>
+        <div class="link-adm">
+            <a href="/">Cadastrar um adm</a>
+        </div>
     </div>
 </body>
 
