--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admFuncionarios.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admFuncionarios.html
@@ -21,6 +21,7 @@
             <li><a href="/adm_sala" class="link-sidebar"><i class="fa-solid fa-house"></i> Ambientes</a></li>
             <li><a href="/adm_consumo" class="link-sidebar"><i class="fa-solid fa-box"></i> Estoque</a></li>
             <li><a href="/adm_mov" class="link-sidebar"><i class="fa-solid fa-arrows-alt-v"></i> Movimentações</a></li>
+            <li><a href="/logout_adm" class="link-sidebar"><i class="fas fa-sign-out-alt"></i>Sair</a></li>
         </ul>
     </div>
     <div class="navBar">
