--- a/gerenciamento_senai/src/main/resources/static/css/styleLogin.css
+++ b/gerenciamento_senai/src/main/resources/static/css/styleLogin.css
@@ -29,6 +29,7 @@ body {
     padding: 10px;
     border: 1px solid rgb(161, 161, 161);
     outline: none;
+    border-radius: 8px;
 }
 
 .card-login form input:active, .card-login form input:focus {
@@ -49,6 +50,7 @@ body {
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
+    transition: 0.4s;
 }
 
 .card-login form button:hover {
