--- a/gerenciamento_senai/src/main/resources/static/css/style.css
+++ b/gerenciamento_senai/src/main/resources/static/css/style.css
@@ -91,6 +91,10 @@ ul {
     padding-left: 20px;
 }
 
+a {
+    text-decoration: none;
+}
+
 .sideBar {
     background-color: #1e1e1e;
     color: #fff;
