--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admMovimentacao.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admMovimentacao.html
@@ -68,17 +68,17 @@
     <div class="links">
         <a href="/cadastro-movimentacao" class="link" style="width: 35em;">
             <div>
-                <h1 style="font-size: 18px;">Realizar uma nova movimentacao</h1>
+                <h1 style="font-size: 18px;">Realizar uma nova movimentação</h1>
             </div>
         </a>
         <a href="/aprovar-movimentacao" class="link">
             <div>
-                <h1 style="font-size: 18px;">Aprovar movimentacoes</h1>
+                <h1 style="font-size: 18px;">Aprovar movimentações</h1>
             </div>
         </a>
         <a href="/editar-movimentacao" class="link" style="width: 35em;">
             <div>
-                <h1 style="font-size: 18px;">Editar/Finalizar movimentacoes</h1>
+                <h1 style="font-size: 18px;">Editar/Finalizar movimentações</h1>
             </div>
         </a>
     </div>
