--- a/gerenciamento_senai/src/main/resources/templates/loginAdm.html
+++ b/gerenciamento_senai/src/main/resources/templates/loginAdm.html
@@ -26,7 +26,7 @@
             <p style="color: white;">Não tem uma conta Adm? </p><a href="/">Faça login como funcionario</a>
         </div>
         <div class="link-adm">
-            <a href="/">Cadastrar um adm</a>
+            <a href="/cad-adm">Cadastrar um adm</a>
         </div>
     </div>
 </body>
