--- a/gerenciamento_senai/src/main/resources/static/css/styleCadastro.css
+++ b/gerenciamento_senai/src/main/resources/static/css/styleCadastro.css
@@ -22,6 +22,20 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    border-radius: 8px;
+    transition: 0.4s;
+}
+
+.update form input:active, .update form input:focus{
+    border: 1px solid rgb(175, 39, 39);
+    box-shadow: 0px 0px 50px -11px rgba(255, 0, 0, 0.1);
+    transition: 0.4s;
+}
+
+.update form input:focus {
+    border: 1px solid rgb(175, 39, 39);
+    box-shadow: 0px 0px 50px -11px rgba(255, 0, 0, 0.1);
+    transition: 0.4s;
 }
 
 .update form label {
@@ -34,8 +48,9 @@
 .update form input {
     padding: 10px;
     width: 400px;
-    border: 1px solid #cccccc;
+    border: 2px solid #cccccc;
     margin: 5px;
+    border-radius: 16px;
 }
 
 .update form textarea {
@@ -94,14 +109,14 @@
 }
 
 .navbar-titulo {
-    margin-top: 10px;
     width: 100%;
     padding: 0.2em 1.4em;
     background: #f6e6e7;
     color: rgb(196, 27, 27);
     font-size: 24px;
-    border: 2px solid #af8b8b;
+    border-bottom: 2px solid #DDB9BB;
     margin-bottom: 1.5em;
+    margin-left: 14.5em;
 }
 
 .pre-cad {
