--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admConsumo.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admConsumo.html
@@ -67,13 +67,13 @@
         </table>
     </div>
     <div class="links">
-        <a href="/cadastro-consumo">
-            <div class="link">
+        <a href="/cadastro-consumo" class="link" style="width: 50em">
+            <div>
                 <h1>Cadastrar item</h1>
             </div>
         </a>
-        <a href="/adm-registrar-saida">
-            <div class="link">
+        <a href="/adm-registrar-saida" class="link" style="width: 50em">
+            <div>
                 <h1>Registrar saída</h1>
             </div>
         </a>
