--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/AdmRegistrarEntrada.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/AdmRegistrarEntrada.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Document</title>
 </head>
