--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/cadastroAmbiente.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/cadastroAmbiente.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Salas</title>
-    <!-- Bootstrap CSS -->
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/styleCadastro.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
