--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/confirmaReprovacao.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/confirmaReprovacao.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Confirmação</title>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
