--- a/gerenciamento_senai/src/main/resources/templates/cadastroAdm.html
+++ b/gerenciamento_senai/src/main/resources/templates/cadastroAdm.html
@@ -30,7 +30,7 @@
             <p style="color: white;">Não tem uma conta Adm? </p><a href="/">Faça login como funcionario</a>
         </div>
         <div class="link-adm">
-            <a href="/cad-adm">Cadastrar um adm</a>
+            <a href="/login-adm">Logar como adm</a>
         </div>
     </div>
 </body>
