--- a/gerenciamento_senai/src/main/resources/templates/cadastroAdm.html
+++ b/gerenciamento_senai/src/main/resources/templates/cadastroAdm.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="body-adm">
-    <div class="card-login-adm">
+    <div class="card-cadastro-adm">
         <div class="image">
             <img th:src="@{/img/logo-senai1.png}" alt="logo">
         </div>
