--- a/gerenciamento_senai/src/main/resources/static/css/styleLogin.css
+++ b/gerenciamento_senai/src/main/resources/static/css/styleLogin.css
@@ -83,6 +83,22 @@ body {
 }
 
 
+.card-cadastro-adm {
+    transition: 0.7s;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 25em;
+    height: 50em;
+    margin: 0 auto;
+    padding: 0em 5em;
+    box-shadow: 0px 0px 53px -3px rgba(177, 177, 177, 0.1);
+    border-radius: 8px;
+    border: 1px solid rgb(73, 73, 73);
+    margin-top: 5em;
+    background-color: rgb(12, 12, 12);
+}
+
 .card-login-adm {
     transition: 0.7s;
     display: flex;
@@ -144,6 +160,54 @@ body {
 }
 
 .card-login-adm .image img{
+    max-width: 100%;
+}
+
+.card-cadastro-adm form {
+    gap: 5px;
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+}
+
+.card-cadastro-adm form input {
+    padding: 10px;
+    border: 1px solid rgb(161, 161, 161);
+    outline: none;
+    background: rgb(12, 12, 12);
+    color: white;
+}
+
+.card-cadastro-adm form input:active, .card-cadastro form input:focus {
+    border: 1px solid rgb(175, 39, 39);
+    box-shadow: 0px 0px 50px -11px rgba(255, 0, 0, 0.247);
+}
+
+.card-cadastro-adm form button{
+    width: 25em;
+    padding: 0.75em;
+    background-color: rgb(128, 26, 26);
+    border: 1px solid rgb(241, 90, 90);
+    border-radius: 7px;
+    color: white;
+    font-family: "Bricolage Grotesque", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+.card-cadastro-adm form button:hover {
+    background-color: rgb(170, 67, 67);
+    transition: 0.4s;
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.card-cadastro-adm .image img{
     max-width: 100%;
 }
 
