--- a/gerenciamento_senai/src/main/resources/templates/interna/verPatrimoniosSala.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/verPatrimoniosSala.html
@@ -9,6 +9,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <div class="sideBar">
+        <div class="logo">
+            <img th:src="@{/img/logo-senai1.png}" alt="">
+        </div>
+        <ul>
+            <li><a href="/interna" class="link-sidebar"><i class="fa-solid fa-inbox"></i>
+                    Dashboard</a></li>
+            <li><a href="/listar_patrimonios" class="link-sidebar"><i class="fa-solid fa-star"></i> Ativos</a></li>
+            <li  class="active"><a href="/listar_salas" class="link-sidebar"><i class="fa-solid fa-house"></i> Ambientes</a>
+            </li>
+            <li><a href="/listar_armazem" class="link-sidebar"><i class="fa-solid fa-box"></i> Estoque</a></li>
+            <li><a href="/listar_movimentacoes" class="link-sidebar"><i class="fa-solid fa-arrows-alt-v"></i> Movimentações</a></li>
+            <li><a href="/logout" class="link-sidebar"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
+        </ul>
+    </div>
+    <div class="navBar">
+        <ul>
+            <li><input type="text" placeholder="Buscar..."></li>
+            <div class="iconsBar">
+                <i class="fa-solid fa-cog"></i>
+                <i class="fa-solid fa-bell"></i>
+            </div>
+        </ul>
+    </div>
     <h2>Patrimônios cadastrados no ambiente <span th:text="${sala.nome}"></span></h2>
     <!-- Se existirem patrimônios encontrados, exibir na tabela -->
     <div class="content read">
