--- a/gerenciamento_senai/src/main/resources/static/css/styleCadastro.css
+++ b/gerenciamento_senai/src/main/resources/static/css/styleCadastro.css
@@ -53,17 +53,18 @@
     border-radius: 16px;
 }
 
+.update form select {
+    padding: 10px;
+    width: 420px;
+    border: 2px solid #cccccc;
+    margin: 5px;
+    border-radius: 16px;
+}
+
 .update form textarea {
     padding: 10px;
     height: 20px;
     width: 400px;
-}
-
-.update form select {
-    padding: 10px;
-    width: 400px;
-    border: 1px solid #cccccc;
-    margin: 5px;
 }
 
 .update form button[type="submit"] {
